--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TP 6 : Dessin de fractales (avec récursivité)\n",
+    "# [TP 6 : Dessin de fractales ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F6_fractales.ipynb%26branch%3Dmaster)\n",
+    "\n",
     "\n",
     "<mark>DM à rendre au plus tard le 04/01/2022 : finir les TP 5 et 6 et les rendre soit à l'écrit (éventuellement imprimé), soit via GitHub/mail, comme pour le premier DM.</mark>"
    ]
@@ -24,10 +25,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:46.071440Z",
-     "iopub.status.busy": "2021-12-12T16:20:46.070940Z",
-     "iopub.status.idle": "2021-12-12T16:20:48.870920Z",
-     "shell.execute_reply": "2021-12-12T16:20:48.870335Z"
+     "iopub.execute_input": "2021-12-12T16:39:58.980778Z",
+     "iopub.status.busy": "2021-12-12T16:39:58.980264Z",
+     "iopub.status.idle": "2021-12-12T16:40:01.905304Z",
+     "shell.execute_reply": "2021-12-12T16:40:01.905713Z"
     }
    },
    "outputs": [],
@@ -50,10 +51,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:48.885891Z",
-     "iopub.status.busy": "2021-12-12T16:20:48.875498Z",
-     "iopub.status.idle": "2021-12-12T16:20:48.992911Z",
-     "shell.execute_reply": "2021-12-12T16:20:48.993562Z"
+     "iopub.execute_input": "2021-12-12T16:40:01.923097Z",
+     "iopub.status.busy": "2021-12-12T16:40:01.922636Z",
+     "iopub.status.idle": "2021-12-12T16:40:02.031028Z",
+     "shell.execute_reply": "2021-12-12T16:40:02.031392Z"
     }
    },
    "outputs": [
@@ -106,10 +107,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:48.996724Z",
-     "iopub.status.busy": "2021-12-12T16:20:48.995824Z",
-     "iopub.status.idle": "2021-12-12T16:20:49.376857Z",
-     "shell.execute_reply": "2021-12-12T16:20:49.376144Z"
+     "iopub.execute_input": "2021-12-12T16:40:02.072097Z",
+     "iopub.status.busy": "2021-12-12T16:40:02.061274Z",
+     "iopub.status.idle": "2021-12-12T16:40:02.404109Z",
+     "shell.execute_reply": "2021-12-12T16:40:02.403722Z"
     },
     "tags": [
      "hide"
@@ -157,10 +158,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:49.391862Z",
-     "iopub.status.busy": "2021-12-12T16:20:49.381486Z",
-     "iopub.status.idle": "2021-12-12T16:20:49.469269Z",
-     "shell.execute_reply": "2021-12-12T16:20:49.469598Z"
+     "iopub.execute_input": "2021-12-12T16:40:02.427112Z",
+     "iopub.status.busy": "2021-12-12T16:40:02.424144Z",
+     "iopub.status.idle": "2021-12-12T16:40:02.499226Z",
+     "shell.execute_reply": "2021-12-12T16:40:02.499561Z"
     }
    },
    "outputs": [
@@ -250,10 +251,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:49.477780Z",
-     "iopub.status.busy": "2021-12-12T16:20:49.476574Z",
-     "iopub.status.idle": "2021-12-12T16:20:49.750343Z",
-     "shell.execute_reply": "2021-12-12T16:20:49.749976Z"
+     "iopub.execute_input": "2021-12-12T16:40:02.517091Z",
+     "iopub.status.busy": "2021-12-12T16:40:02.516445Z",
+     "iopub.status.idle": "2021-12-12T16:40:02.788463Z",
+     "shell.execute_reply": "2021-12-12T16:40:02.788803Z"
     },
     "tags": [
      "hide"
@@ -312,10 +313,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:49.773966Z",
-     "iopub.status.busy": "2021-12-12T16:20:49.767004Z",
-     "iopub.status.idle": "2021-12-12T16:20:49.817465Z",
-     "shell.execute_reply": "2021-12-12T16:20:49.818067Z"
+     "iopub.execute_input": "2021-12-12T16:40:02.853076Z",
+     "iopub.status.busy": "2021-12-12T16:40:02.851477Z",
+     "iopub.status.idle": "2021-12-12T16:40:02.903301Z",
+     "shell.execute_reply": "2021-12-12T16:40:02.903628Z"
     },
     "tags": [
      "hide"
@@ -361,10 +362,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:49.829370Z",
-     "iopub.status.busy": "2021-12-12T16:20:49.827159Z",
-     "iopub.status.idle": "2021-12-12T16:20:49.997745Z",
-     "shell.execute_reply": "2021-12-12T16:20:49.998107Z"
+     "iopub.execute_input": "2021-12-12T16:40:02.922014Z",
+     "iopub.status.busy": "2021-12-12T16:40:02.905729Z",
+     "iopub.status.idle": "2021-12-12T16:40:03.083379Z",
+     "shell.execute_reply": "2021-12-12T16:40:03.082971Z"
     },
     "tags": [
      "hide"
@@ -411,10 +412,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:50.003626Z",
-     "iopub.status.busy": "2021-12-12T16:20:50.003202Z",
-     "iopub.status.idle": "2021-12-12T16:20:50.333251Z",
-     "shell.execute_reply": "2021-12-12T16:20:50.332857Z"
+     "iopub.execute_input": "2021-12-12T16:40:03.090867Z",
+     "iopub.status.busy": "2021-12-12T16:40:03.089931Z",
+     "iopub.status.idle": "2021-12-12T16:40:03.384638Z",
+     "shell.execute_reply": "2021-12-12T16:40:03.384232Z"
     },
     "tags": [
      "hide"
@@ -468,10 +469,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:20:50.337445Z",
-     "iopub.status.busy": "2021-12-12T16:20:50.337026Z",
-     "iopub.status.idle": "2021-12-12T16:20:50.339730Z",
-     "shell.execute_reply": "2021-12-12T16:20:50.339368Z"
+     "iopub.execute_input": "2021-12-12T16:40:03.388928Z",
+     "iopub.status.busy": "2021-12-12T16:40:03.388501Z",
+     "iopub.status.idle": "2021-12-12T16:40:03.391529Z",
+     "shell.execute_reply": "2021-12-12T16:40:03.391162Z"
     }
    },
    "outputs": [],
