--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -7,7 +7,7 @@
     "# [TP 6 : Dessin de fractales ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F6_fractales.ipynb%26branch%3Dmaster)\n",
     "\n",
     "\n",
-    "<mark>DM à rendre au plus tard le 04/01/2022 : finir les TP 5 et 6 et les rendre soit à l'écrit (éventuellement imprimé), soit via GitHub/mail, comme pour le premier DM.</mark>"
+    "<mark>DM à rendre au plus tard le 04/01/2022 : finir les TP 4, 5 et 6 et les rendre soit à l'écrit (éventuellement imprimé), soit via GitHub/mail, comme pour le premier DM.</mark>"
    ]
   },
   {
@@ -25,10 +25,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:39:58.980778Z",
-     "iopub.status.busy": "2021-12-12T16:39:58.980264Z",
-     "iopub.status.idle": "2021-12-12T16:40:01.905304Z",
-     "shell.execute_reply": "2021-12-12T16:40:01.905713Z"
+     "iopub.execute_input": "2021-12-14T21:18:35.314770Z",
+     "iopub.status.busy": "2021-12-14T21:18:35.314278Z",
+     "iopub.status.idle": "2021-12-14T21:18:38.408904Z",
+     "shell.execute_reply": "2021-12-14T21:18:38.407803Z"
     }
    },
    "outputs": [],
@@ -51,10 +51,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:01.923097Z",
-     "iopub.status.busy": "2021-12-12T16:40:01.922636Z",
-     "iopub.status.idle": "2021-12-12T16:40:02.031028Z",
-     "shell.execute_reply": "2021-12-12T16:40:02.031392Z"
+     "iopub.execute_input": "2021-12-14T21:18:38.427710Z",
+     "iopub.status.busy": "2021-12-14T21:18:38.427177Z",
+     "iopub.status.idle": "2021-12-14T21:18:38.539073Z",
+     "shell.execute_reply": "2021-12-14T21:18:38.539794Z"
     }
    },
    "outputs": [
@@ -107,10 +107,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:02.072097Z",
-     "iopub.status.busy": "2021-12-12T16:40:02.061274Z",
-     "iopub.status.idle": "2021-12-12T16:40:02.404109Z",
-     "shell.execute_reply": "2021-12-12T16:40:02.403722Z"
+     "iopub.execute_input": "2021-12-14T21:18:38.559366Z",
+     "iopub.status.busy": "2021-12-14T21:18:38.557682Z",
+     "iopub.status.idle": "2021-12-14T21:18:38.914006Z",
+     "shell.execute_reply": "2021-12-14T21:18:38.913557Z"
     },
     "tags": [
      "hide"
@@ -158,10 +158,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:02.427112Z",
-     "iopub.status.busy": "2021-12-12T16:40:02.424144Z",
-     "iopub.status.idle": "2021-12-12T16:40:02.499226Z",
-     "shell.execute_reply": "2021-12-12T16:40:02.499561Z"
+     "iopub.execute_input": "2021-12-14T21:18:38.934608Z",
+     "iopub.status.busy": "2021-12-14T21:18:38.919472Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.012994Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.013375Z"
     }
    },
    "outputs": [
@@ -251,10 +251,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:02.517091Z",
-     "iopub.status.busy": "2021-12-12T16:40:02.516445Z",
-     "iopub.status.idle": "2021-12-12T16:40:02.788463Z",
-     "shell.execute_reply": "2021-12-12T16:40:02.788803Z"
+     "iopub.execute_input": "2021-12-14T21:18:39.020384Z",
+     "iopub.status.busy": "2021-12-14T21:18:39.019940Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.375181Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.374620Z"
     },
     "tags": [
      "hide"
@@ -313,10 +313,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:02.853076Z",
-     "iopub.status.busy": "2021-12-12T16:40:02.851477Z",
-     "iopub.status.idle": "2021-12-12T16:40:02.903301Z",
-     "shell.execute_reply": "2021-12-12T16:40:02.903628Z"
+     "iopub.execute_input": "2021-12-14T21:18:39.396459Z",
+     "iopub.status.busy": "2021-12-14T21:18:39.381084Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.447477Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.448163Z"
     },
     "tags": [
      "hide"
@@ -362,10 +362,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:02.922014Z",
-     "iopub.status.busy": "2021-12-12T16:40:02.905729Z",
-     "iopub.status.idle": "2021-12-12T16:40:03.083379Z",
-     "shell.execute_reply": "2021-12-12T16:40:03.082971Z"
+     "iopub.execute_input": "2021-12-14T21:18:39.465110Z",
+     "iopub.status.busy": "2021-12-14T21:18:39.462917Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.636537Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.636086Z"
     },
     "tags": [
      "hide"
@@ -412,10 +412,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:03.090867Z",
-     "iopub.status.busy": "2021-12-12T16:40:03.089931Z",
-     "iopub.status.idle": "2021-12-12T16:40:03.384638Z",
-     "shell.execute_reply": "2021-12-12T16:40:03.384232Z"
+     "iopub.execute_input": "2021-12-14T21:18:39.805919Z",
+     "iopub.status.busy": "2021-12-14T21:18:39.652689Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.965467Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.965002Z"
     },
     "tags": [
      "hide"
@@ -469,10 +469,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-12T16:40:03.388928Z",
-     "iopub.status.busy": "2021-12-12T16:40:03.388501Z",
-     "iopub.status.idle": "2021-12-12T16:40:03.391529Z",
-     "shell.execute_reply": "2021-12-12T16:40:03.391162Z"
+     "iopub.execute_input": "2021-12-14T21:18:39.970103Z",
+     "iopub.status.busy": "2021-12-14T21:18:39.969651Z",
+     "iopub.status.idle": "2021-12-14T21:18:39.972488Z",
+     "shell.execute_reply": "2021-12-14T21:18:39.972860Z"
     }
    },
    "outputs": [],
