--- a/files/2_tp_semestre1/6_fractales.ipynb
+++ b/files/2_tp_semestre1/6_fractales.ipynb
@@ -25,10 +25,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:35.314770Z",
-     "iopub.status.busy": "2021-12-14T21:18:35.314278Z",
-     "iopub.status.idle": "2021-12-14T21:18:38.408904Z",
-     "shell.execute_reply": "2021-12-14T21:18:38.407803Z"
+     "iopub.execute_input": "2021-12-15T09:22:24.571365Z",
+     "iopub.status.busy": "2021-12-15T09:22:24.569953Z",
+     "iopub.status.idle": "2021-12-15T09:22:27.345682Z",
+     "shell.execute_reply": "2021-12-15T09:22:27.344726Z"
     }
    },
    "outputs": [],
@@ -51,10 +51,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:38.427710Z",
-     "iopub.status.busy": "2021-12-14T21:18:38.427177Z",
-     "iopub.status.idle": "2021-12-14T21:18:38.539073Z",
-     "shell.execute_reply": "2021-12-14T21:18:38.539794Z"
+     "iopub.execute_input": "2021-12-15T09:22:27.362555Z",
+     "iopub.status.busy": "2021-12-15T09:22:27.362060Z",
+     "iopub.status.idle": "2021-12-15T09:22:27.466487Z",
+     "shell.execute_reply": "2021-12-15T09:22:27.467113Z"
     }
    },
    "outputs": [
@@ -91,7 +91,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `segment` telle que, si `p` et `q` sont des couples (des points), `segment(p, q)` dessine le segment d'extrémités `p` et `q`. Par exemple, `segment((3, 7), (4, 5))` doit dessiner le segment sur le dessin ci-dessus."
+    "**Exercice** : Écrire une fonction `segment` telle que, si `p` et `q` sont des couples (des points), `segment(p, q)` dessine le segment d'extrémités `p` et `q`. Par exemple, `segment((3, 7), (4, 5))` doit dessiner le segment sur le dessin ci-dessus.  \n",
+    "On rappelle que `p[0]` est le 1er élément  de `p` (donc l'abscisse de `p`) et `p[1]` le 2ème (ordonnée)."
    ]
   },
   {
@@ -107,10 +108,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:38.559366Z",
-     "iopub.status.busy": "2021-12-14T21:18:38.557682Z",
-     "iopub.status.idle": "2021-12-14T21:18:38.914006Z",
-     "shell.execute_reply": "2021-12-14T21:18:38.913557Z"
+     "iopub.execute_input": "2021-12-15T09:22:27.470424Z",
+     "iopub.status.busy": "2021-12-15T09:22:27.469503Z",
+     "iopub.status.idle": "2021-12-15T09:22:27.814346Z",
+     "shell.execute_reply": "2021-12-15T09:22:27.813900Z"
     },
     "tags": [
      "hide"
@@ -158,10 +159,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:38.934608Z",
-     "iopub.status.busy": "2021-12-14T21:18:38.919472Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.012994Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.013375Z"
+     "iopub.execute_input": "2021-12-15T09:22:27.835586Z",
+     "iopub.status.busy": "2021-12-15T09:22:27.819559Z",
+     "iopub.status.idle": "2021-12-15T09:22:27.910107Z",
+     "shell.execute_reply": "2021-12-15T09:22:27.910723Z"
     }
    },
    "outputs": [
@@ -251,10 +252,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:39.020384Z",
-     "iopub.status.busy": "2021-12-14T21:18:39.019940Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.375181Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.374620Z"
+     "iopub.execute_input": "2021-12-15T09:22:27.926912Z",
+     "iopub.status.busy": "2021-12-15T09:22:27.921918Z",
+     "iopub.status.idle": "2021-12-15T09:22:28.189785Z",
+     "shell.execute_reply": "2021-12-15T09:22:28.190099Z"
     },
     "tags": [
      "hide"
@@ -313,10 +314,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:39.396459Z",
-     "iopub.status.busy": "2021-12-14T21:18:39.381084Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.447477Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.448163Z"
+     "iopub.execute_input": "2021-12-15T09:22:28.259315Z",
+     "iopub.status.busy": "2021-12-15T09:22:28.258834Z",
+     "iopub.status.idle": "2021-12-15T09:22:28.315519Z",
+     "shell.execute_reply": "2021-12-15T09:22:28.316014Z"
     },
     "tags": [
      "hide"
@@ -362,10 +363,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:39.465110Z",
-     "iopub.status.busy": "2021-12-14T21:18:39.462917Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.636537Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.636086Z"
+     "iopub.execute_input": "2021-12-15T09:22:28.325099Z",
+     "iopub.status.busy": "2021-12-15T09:22:28.323435Z",
+     "iopub.status.idle": "2021-12-15T09:22:28.492762Z",
+     "shell.execute_reply": "2021-12-15T09:22:28.493086Z"
     },
     "tags": [
      "hide"
@@ -412,10 +413,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:39.805919Z",
-     "iopub.status.busy": "2021-12-14T21:18:39.652689Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.965467Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.965002Z"
+     "iopub.execute_input": "2021-12-15T09:22:28.508761Z",
+     "iopub.status.busy": "2021-12-15T09:22:28.500407Z",
+     "iopub.status.idle": "2021-12-15T09:22:28.808968Z",
+     "shell.execute_reply": "2021-12-15T09:22:28.808457Z"
     },
     "tags": [
      "hide"
@@ -469,10 +470,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T21:18:39.970103Z",
-     "iopub.status.busy": "2021-12-14T21:18:39.969651Z",
-     "iopub.status.idle": "2021-12-14T21:18:39.972488Z",
-     "shell.execute_reply": "2021-12-14T21:18:39.972860Z"
+     "iopub.execute_input": "2021-12-15T09:22:28.813649Z",
+     "iopub.status.busy": "2021-12-15T09:22:28.813180Z",
+     "iopub.status.idle": "2021-12-15T09:22:28.814951Z",
+     "shell.execute_reply": "2021-12-15T09:22:28.815266Z"
     }
    },
    "outputs": [],
